<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rockpaperscissor.LogIn" >

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/single_multi_heading"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#470f52"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/single_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:layout_marginTop="34dp"
        android:onClick="startSingleGamePlay"
        android:text="@string/single_player_btn"
        android:textColor="#470f52"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/multi_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/single_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:onClick="startMultiGamePlay"
        android:text="@string/multi_player_btn"
        android:textColor="#470f52"
        android:textStyle="bold|italic" />

</RelativeLayout>